# LABBench2-Pro

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  labbench2_pro_dev_plan.md  pyproject.toml  run_all.sh
db/: schema.sql
paper/: LABBench2Pro_Paper.md
results/: RESULTS.md  generate_all.py  summary.json
results/raw/: chain_runs.csv  judge_audits.csv
results/tables/: supplementary_chain_traces.md  table1_main_results.tex  table2_chain_results.tex  table3_cost_breakdown.tex  table4_methodological_audit.tex
scripts/: deploy.sh  run_tier1.sh  setup_db.sh
src/: api.py  cache.py  config.py  db.py  models.py  worker.py
src/tier1/: bootstrap_ci.py  contamination.py  grading.py  irt_analysis.py  judge_audit.py  regrade_hypothesis.py  run_eval.py
src/tier2/: gen_calibration.py  gen_hypothesis.py  gen_stats_tasks.py  gen_structure.py  validate_tasks.py
src/tier3/: chains.py  cost_tracker.py  feedback_sim.py  gen_chains.py  run_chains.py
tasks/chains/: ALL_TEMPLATES.md  AUTHORING_GUIDE.md  LABBench2Pro_AllExamples.md  VERIFICATION_REPORT.md  chain_definitions.json
tasks/chains/tasks/: chain01_step1.json  chain01_step2.json  chain01_step3.json  chain01_step4.json  chain02_step1.json  chain02_step2.json  chain02_step3.json  chain02_step4.json  chain03_step1.json  chain03_step2.json  chain03_step3.json  chain04_step1.json  chain04_step2.json  chain04_step3.json  chain05_step1.json  chain05_step2.json  chain05_step3.json  chain06_step1.json  chain06_step2.json  chain06_step3.json  chain07_step1.json  chain07_step2.json  chain07_step3.json  (+73 more)
